Fixed and regenerated nationalizations

--- a/nationalization/internal/languages/ar.json
+++ b/nationalization/internal/languages/ar.json
@@ -136,6 +136,10 @@
           "Title": "دلة"
         },
         {
+          "ID": 416657,
+          "Title": "بيغ فوت"
+        },
+        {
           "ID": 417303,
           "Title": "قصر بكنغهام"
         },
@@ -490,6 +494,10 @@
           "Title": "تصنيف:هندسة المدن"
         },
         {
+          "ID": 316965,
+          "Title": "تصنيف:آثار ونصب تذكارية"
+        },
+        {
           "ID": 615173,
           "Title": "تصنيف:أماكن"
         },
@@ -503,6 +511,10 @@
         }
       ],
       "Articles": [
+        {
+          "ID": 2665,
+          "Title": "هرم"
+        },
         {
           "ID": 5583,
           "Title": "باريس"
@@ -760,6 +772,10 @@
           "Title": "ليمون"
         },
         {
+          "ID": 14972,
+          "Title": "نخلة"
+        },
+        {
           "ID": 19722,
           "Title": "قمح"
         },
@@ -868,6 +884,10 @@
           "Title": "عرعار فواح"
         },
         {
+          "ID": 1248528,
+          "Title": "ريح سائدة"
+        },
+        {
           "ID": 1303158,
           "Title": "عصبون حركي"
         },
@@ -933,6 +953,10 @@
       "ID": 2147483643,
       "Title": "People and self",
       "Categories": [
+        {
+          "ID": 36792,
+          "Title": "تصنيف:نساء"
+        },
         {
           "ID": 189709,
           "Title": "تصنيف:ذات"
@@ -1222,10 +1246,6 @@
           "Title": "تصنيف:دين"
         },
         {
-          "ID": 586517,
-          "Title": "تصنيف:نظريات فلسفية"
-        },
-        {
           "ID": 1013337,
           "Title": "تصنيف:معتقدات وتقاليد وحركات دينية"
         },
@@ -1240,10 +1260,6 @@
         {
           "ID": 2274664,
           "Title": "تصنيف:لاألوهية"
-        },
-        {
-          "ID": 2473822,
-          "Title": "تصنيف:علم الأساطير"
         }
       ]
     },
@@ -1270,6 +1286,10 @@
         {
           "ID": 615205,
           "Title": "تصنيف:حقوق"
+        },
+        {
+          "ID": 1472461,
+          "Title": "تصنيف:جامعات وكليات حسب البلد"
         }
       ],
       "Articles": [
