--- a/nationalization/internal/languages/az.json
+++ b/nationalization/internal/languages/az.json
@@ -132,6 +132,10 @@
           "Title": "AC/DC"
         },
         {
+          "ID": 293730,
+          "Title": "Düyü qazmağı"
+        },
+        {
           "ID": 295081,
           "Title": "Tako"
         },
@@ -212,6 +216,10 @@
           "Title": "Belçika şokoladı"
         },
         {
+          "ID": 568065,
+          "Title": "Realizm (incəsənət)"
+        },
+        {
           "ID": 570396,
           "Title": "Fellatio"
         }
@@ -240,6 +248,10 @@
         {
           "ID": 421708,
           "Title": "Kateqoriya:Siyahılar:Coğrafiya"
+        },
+        {
+          "ID": 425183,
+          "Title": "Kateqoriya:Abidələr"
         }
       ],
       "Articles": [
@@ -262,6 +274,10 @@
         {
           "ID": 269107,
           "Title": "Kvinslend"
+        },
+        {
+          "ID": 332220,
+          "Title": "Ehram"
         }
       ]
     },
@@ -294,10 +310,6 @@
         {
           "ID": 5070,
           "Title": "Kateqoriya:Tarix"
-        },
-        {
-          "ID": 6805,
-          "Title": "Kateqoriya:Millətlərinə görə tarix"
         },
         {
           "ID": 27927,
@@ -474,6 +486,10 @@
           "Title": "Pinus kesiya"
         },
         {
+          "ID": 179766,
+          "Title": "Xurma palması"
+        },
+        {
           "ID": 284854,
           "Title": "Masturbasiya"
         },
@@ -518,6 +534,10 @@
         {
           "ID": 114225,
           "Title": "Kateqoriya:Soyadlar"
+        },
+        {
+          "ID": 151520,
+          "Title": "Kateqoriya:Qadınlar"
         },
         {
           "ID": 265911,
@@ -740,20 +760,12 @@
           "Title": "Kateqoriya:Din"
         },
         {
-          "ID": 5813,
-          "Title": "Kateqoriya:Mifologiya"
-        },
-        {
           "ID": 28596,
           "Title": "Kateqoriya:Dinlər"
         },
         {
           "ID": 292609,
           "Title": "Kateqoriya:Etiqad"
-        },
-        {
-          "ID": 295150,
-          "Title": "Kateqoriya:Fəlsəfi nəzəriyyələr"
         },
         {
           "ID": 440898,
