--- a/nationalization/internal/languages/ba.json
+++ b/nationalization/internal/languages/ba.json
@@ -90,6 +90,10 @@
           "Title": "Категория:География"
         },
         {
+          "ID": 8240,
+          "Title": "Категория:Һәйкәлдәр"
+        },
+        {
           "ID": 74693,
           "Title": "Категория:Геоморфология"
         },
@@ -110,6 +114,10 @@
         {
           "ID": 64994,
           "Title": "Мьянма"
+        },
+        {
+          "ID": 99271,
+          "Title": "Пирамида (архитектура)"
         }
       ]
     },
@@ -308,6 +316,10 @@
           "Title": "Категория:Фамилиялар"
         },
         {
+          "ID": 85824,
+          "Title": "Категория:Ҡатын-ҡыҙҙар"
+        },
+        {
           "ID": 138858,
           "Title": "Категория:Шәхсиәт"
         }
@@ -428,20 +440,12 @@
           "Title": "Категория:Дин"
         },
         {
-          "ID": 5910,
-          "Title": "Категория:Мифология"
-        },
-        {
           "ID": 83138,
           "Title": "Категория:Диндәр"
         },
         {
           "ID": 85156,
           "Title": "Категория:Һинд диндәр"
-        },
-        {
-          "ID": 90030,
-          "Title": "Категория:Философик теориялар"
         },
         {
           "ID": 94634,
@@ -464,6 +468,10 @@
         {
           "ID": 32939,
           "Title": "Категория:Халыҡ-ара ойошмалар"
+        },
+        {
+          "ID": 83283,
+          "Title": "Категория:Илдәр буйынса юғары уҡыу йорттары"
         },
         {
           "ID": 99859,
