--- a/nationalization/internal/languages/be-x-old.json
+++ b/nationalization/internal/languages/be-x-old.json
@@ -158,6 +158,10 @@
           "Title": "Катэгорыя:Урбаністычныя дысцыпліны"
         },
         {
+          "ID": 36731,
+          "Title": "Катэгорыя:Помнікі"
+        },
+        {
           "ID": 52005,
           "Title": "Катэгорыя:Сьпісы:Геаграфія"
         },
@@ -182,6 +186,10 @@
         {
           "ID": 26084,
           "Title": "Канбэра"
+        },
+        {
+          "ID": 46764,
+          "Title": "Піраміда (архітэктура)"
         },
         {
           "ID": 86462,
@@ -420,6 +428,10 @@
           "Title": "Катэгорыя:Асобы"
         },
         {
+          "ID": 23594,
+          "Title": "Катэгорыя:Жанчыны"
+        },
+        {
           "ID": 29235,
           "Title": "Катэгорыя:Асабістае жыцьцё"
         },
@@ -596,14 +608,6 @@
           "Title": "Катэгорыя:Рэлігія"
         },
         {
-          "ID": 4342,
-          "Title": "Катэгорыя:Міталёгія"
-        },
-        {
-          "ID": 9164,
-          "Title": "Катэгорыя:Філязофскія тэорыі"
-        },
-        {
           "ID": 72243,
           "Title": "Катэгорыя:Вера"
         },
@@ -644,6 +648,10 @@
         {
           "ID": 42622,
           "Title": "Катэгорыя:Грамадзкія навукі"
+        },
+        {
+          "ID": 44282,
+          "Title": "Катэгорыя:Вышэйшыя навучальныя ўстановы па краінах"
         },
         {
           "ID": 51861,
