--- a/nationalization/internal/languages/be.json
+++ b/nationalization/internal/languages/be.json
@@ -214,6 +214,10 @@
           "Title": "Катэгорыя:Геамарфалогія"
         },
         {
+          "ID": 78380,
+          "Title": "Катэгорыя:Манументы"
+        },
+        {
           "ID": 127959,
           "Title": "Катэгорыя:Спісы:Геаграфія"
         }
@@ -234,6 +238,10 @@
         {
           "ID": 18862,
           "Title": "М’янма"
+        },
+        {
+          "ID": 45249,
+          "Title": "Піраміда (збудаванне)"
         },
         {
           "ID": 72498,
@@ -466,6 +474,10 @@
           "Title": "Суспензія"
         },
         {
+          "ID": 180278,
+          "Title": "Фінікавая пальма"
+        },
+        {
           "ID": 217690,
           "Title": "Пеніс"
         },
@@ -494,6 +506,10 @@
         {
           "ID": 60927,
           "Title": "Катэгорыя:Асабістае жыццё"
+        },
+        {
+          "ID": 70284,
+          "Title": "Катэгорыя:Жанчыны"
         },
         {
           "ID": 347906,
@@ -700,10 +716,6 @@
           "Title": "Катэгорыя:Рэлігія"
         },
         {
-          "ID": 18326,
-          "Title": "Катэгорыя:Міфалогія"
-        },
-        {
           "ID": 63844,
           "Title": "Катэгорыя:Вера"
         },
@@ -714,10 +726,6 @@
         {
           "ID": 99082,
           "Title": "Катэгорыя:Крытыка рэлігіі"
-        },
-        {
-          "ID": 142699,
-          "Title": "Катэгорыя:Філасофскія тэорыі"
         },
         {
           "ID": 357835,
@@ -744,6 +752,10 @@
         {
           "ID": 65323,
           "Title": "Катэгорыя:Грамадскія навукі"
+        },
+        {
+          "ID": 85672,
+          "Title": "Катэгорыя:Вышэйшыя навучальныя ўстановы паводле краін"
         }
       ],
       "Articles": [
