--- a/nationalization/internal/languages/bg.json
+++ b/nationalization/internal/languages/bg.json
@@ -80,6 +80,10 @@
           "Title": "Хогуортс"
         },
         {
+          "ID": 92360,
+          "Title": "Реализъм"
+        },
+        {
           "ID": 95033,
           "Title": "Грийн Дей"
         },
@@ -118,6 +122,10 @@
         {
           "ID": 159010,
           "Title": "Бекон"
+        },
+        {
+          "ID": 163581,
+          "Title": "Голямата стъпка"
         },
         {
           "ID": 174501,
@@ -246,6 +254,10 @@
           "Title": "Категория:География"
         },
         {
+          "ID": 98921,
+          "Title": "Категория:Паметници"
+        },
+        {
           "ID": 124981,
           "Title": "Категория:Геоморфология"
         },
@@ -278,6 +290,10 @@
         {
           "ID": 114790,
           "Title": "Канбера"
+        },
+        {
+          "ID": 192705,
+          "Title": "Пирамида (архитектура)"
         }
       ]
     },
@@ -510,6 +526,10 @@
           "Title": "Змиегущери"
         },
         {
+          "ID": 130444,
+          "Title": "Финикова палма"
+        },
+        {
           "ID": 136520,
           "Title": "Мускулна система"
         },
@@ -590,6 +610,10 @@
         {
           "ID": 179638,
           "Title": "Категория:Филмови герои"
+        },
+        {
+          "ID": 314114,
+          "Title": "Категория:Жени"
         }
       ],
       "Articles": [
@@ -804,20 +828,12 @@
           "Title": "Категория:Религия"
         },
         {
-          "ID": 26035,
-          "Title": "Категория:Митология"
-        },
-        {
           "ID": 26970,
           "Title": "Категория:Религиозни системи"
         },
         {
           "ID": 68143,
           "Title": "Категория:Вяра"
-        },
-        {
-          "ID": 277816,
-          "Title": "Категория:Философски теории"
         },
         {
           "ID": 432126,
@@ -830,12 +846,6 @@
         {
           "ID": 453616,
           "Title": "Категория:Антропология на религията"
-        }
-      ],
-      "Articles": [
-        {
-          "ID": 626763,
-          "Title": "Чревоугодничество"
         }
       ]
     },
@@ -858,6 +868,10 @@
         {
           "ID": 82242,
           "Title": "Категория:Феминизъм"
+        },
+        {
+          "ID": 211863,
+          "Title": "Категория:Висши училища по страна"
         },
         {
           "ID": 498660,
