--- a/nationalization/internal/languages/bn.json
+++ b/nationalization/internal/languages/bn.json
@@ -172,6 +172,10 @@
           "Title": "প্যারিস"
         },
         {
+          "ID": 6556,
+          "Title": "পিরামিড"
+        },
+        {
           "ID": 8847,
           "Title": "মিয়ানমার"
         },
@@ -200,6 +204,10 @@
         {
           "ID": 271757,
           "Title": "বিষয়শ্রেণী:স্বাস্থ্য বিজ্ঞান"
+        },
+        {
+          "ID": 533814,
+          "Title": "বিষয়শ্রেণী:জেনেটিক রোগ"
         },
         {
           "ID": 667584,
@@ -282,10 +290,6 @@
         {
           "ID": 595537,
           "Title": "বিষয়শ্রেণী:যুক্তি"
-        },
-        {
-          "ID": 683667,
-          "Title": "বিষয়শ্রেণী:গাণিতিক ধারণা"
         }
       ],
       "Articles": [
@@ -442,6 +446,10 @@
         {
           "ID": 64403,
           "Title": "বিষয়শ্রেণী:ব্যক্তিগত জীবন"
+        },
+        {
+          "ID": 96430,
+          "Title": "বিষয়শ্রেণী:নারী"
         },
         {
           "ID": 319881,
@@ -644,16 +652,8 @@
           "Title": "বিষয়শ্রেণী:বিশ্বাস"
         },
         {
-          "ID": 469283,
-          "Title": "বিষয়শ্রেণী:দার্শনিক তত্ত্ব"
-        },
-        {
           "ID": 553194,
           "Title": "বিষয়শ্রেণী:ভারতীয় ধর্ম"
-        },
-        {
-          "ID": 562979,
-          "Title": "বিষয়শ্রেণী:পৌরাণিক কাহিনী"
         }
       ]
     },
@@ -676,6 +676,10 @@
         {
           "ID": 265734,
           "Title": "বিষয়শ্রেণী:নারীবাদ"
+        },
+        {
+          "ID": 660927,
+          "Title": "বিষয়শ্রেণী:দেশ অনুযায়ী বিশ্ববিদ্যালয় ও কলেজ"
         }
       ],
       "Articles": [
