--- a/nationalization/internal/languages/el.json
+++ b/nationalization/internal/languages/el.json
@@ -48,6 +48,10 @@
           "Title": "Βικιπαίδεια"
         },
         {
+          "ID": 5653,
+          "Title": "Ρεαλισμός"
+        },
+        {
           "ID": 5723,
           "Title": "Εγκυκλοπαίδεια"
         },
@@ -210,6 +214,10 @@
           "Title": "Κατηγορία:Γεωγραφία"
         },
         {
+          "ID": 17273,
+          "Title": "Κατηγορία:Μνημεία"
+        },
+        {
           "ID": 94537,
           "Title": "Κατηγορία:Πολεοδομία"
         },
@@ -242,6 +250,10 @@
         {
           "ID": 146425,
           "Title": "Κουίνσλαντ"
+        },
+        {
+          "ID": 214075,
+          "Title": "Πυραμίδα (αρχιτεκτονική)"
         }
       ]
     },
@@ -482,6 +494,10 @@
           "Title": "Ανανάς ο εύκομος"
         },
         {
+          "ID": 91537,
+          "Title": "Φοίνικας (φυτό)"
+        },
+        {
           "ID": 113571,
           "Title": "Τροφική αλυσίδα"
         },
@@ -546,6 +562,10 @@
         {
           "ID": 238239,
           "Title": "Κατηγορία:Κινηματογραφικοί χαρακτήρες"
+        },
+        {
+          "ID": 494643,
+          "Title": "Κατηγορία:Γυναίκες"
         },
         {
           "ID": 585594,
@@ -756,16 +776,8 @@
           "Title": "Κατηγορία:Θρησκεία"
         },
         {
-          "ID": 7494,
-          "Title": "Κατηγορία:Μυθολογία"
-        },
-        {
           "ID": 12255,
           "Title": "Κατηγορία:Θρησκευτικές πίστεις, παραδόσεις και κινήματα"
-        },
-        {
-          "ID": 296150,
-          "Title": "Κατηγορία:Φιλοσοφικές θεωρίες"
         },
         {
           "ID": 433603,
@@ -786,12 +798,6 @@
         {
           "ID": 516380,
           "Title": "Κατηγορία:Ανθρωπολογία της θρησκείας"
-        }
-      ],
-      "Articles": [
-        {
-          "ID": 160735,
-          "Title": "Λαιμαργία"
         }
       ]
     },
@@ -818,6 +824,10 @@
         {
           "ID": 468928,
           "Title": "Κατηγορία:Δικαιώματα"
+        },
+        {
+          "ID": 558196,
+          "Title": "Κατηγορία:Ανώτατα εκπαιδευτικά ιδρύματα ανά χώρα"
         }
       ],
       "Articles": [
