--- a/nationalization/internal/languages/es.json
+++ b/nationalization/internal/languages/es.json
@@ -116,16 +116,16 @@
           "Title": "Realismo literario"
         },
         {
-          "ID": 103526,
-          "Title": "Galleta"
-        },
-        {
           "ID": 106779,
           "Title": "Coyota"
         },
         {
           "ID": 117256,
           "Title": "Panceta"
+        },
+        {
+          "ID": 127736,
+          "Title": "Pie Grande"
         },
         {
           "ID": 127997,
@@ -592,6 +592,10 @@
           "Title": "Pizza hawaiana"
         },
         {
+          "ID": 4161089,
+          "Title": "Tomato pie"
+        },
+        {
           "ID": 4171259,
           "Title": "Supplì"
         },
@@ -676,6 +680,10 @@
           "Title": "Chocolate amargo"
         },
         {
+          "ID": 4565088,
+          "Title": "Realismo artístico"
+        },
+        {
           "ID": 4617662,
           "Title": "Bazín"
         },
@@ -756,6 +764,10 @@
           "Title": "War Room (película)"
         },
         {
+          "ID": 7050632,
+          "Title": "Cucayo (arroz)"
+        },
+        {
           "ID": 7101541,
           "Title": "PK (película)"
         },
@@ -810,6 +822,10 @@
           "Title": "Categoría:Geografía"
         },
         {
+          "ID": 54497,
+          "Title": "Categoría:Monumentos"
+        },
+        {
           "ID": 65375,
           "Title": "Categoría:Urbanismo"
         },
@@ -846,6 +862,10 @@
         {
           "ID": 114272,
           "Title": "Queensland"
+        },
+        {
+          "ID": 1886020,
+          "Title": "Pirámide (arquitectura)"
         },
         {
           "ID": 4564865,
@@ -1212,6 +1232,10 @@
           "Title": "Corymbia ficifolia"
         },
         {
+          "ID": 1112720,
+          "Title": "Phoenix (planta)"
+        },
+        {
           "ID": 1206664,
           "Title": "Fragaria × ananassa"
         },
@@ -1242,6 +1266,10 @@
         {
           "ID": 4131960,
           "Title": "Pinus kesiya"
+        },
+        {
+          "ID": 4304988,
+          "Title": "Vientos preponderantes"
         },
         {
           "ID": 5509302,
@@ -1300,6 +1328,10 @@
         {
           "ID": 5585938,
           "Title": "Categoría:Personas"
+        },
+        {
+          "ID": 7700167,
+          "Title": "Categoría:Mujeres"
         }
       ],
       "Articles": [
@@ -1570,10 +1602,6 @@
       "Title": "Religion and belief systems",
       "Categories": [
         {
-          "ID": 49204,
-          "Title": "Categoría:Mitología"
-        },
-        {
           "ID": 50653,
           "Title": "Categoría:Religión"
         },
@@ -1604,16 +1632,6 @@
         {
           "ID": 4157500,
           "Title": "Categoría:No teísmo"
-        },
-        {
-          "ID": 5076691,
-          "Title": "Categoría:Teorías filosóficas"
-        }
-      ],
-      "Articles": [
-        {
-          "ID": 146023,
-          "Title": "Gula"
         }
       ]
     },
@@ -2238,6 +2256,10 @@
         {
           "ID": 5165081,
           "Title": "Universidad de Ferrara"
+        },
+        {
+          "ID": 5172326,
+          "Title": "Universidad de Montana"
         },
         {
           "ID": 5190565,
