--- a/nationalization/internal/languages/fa.json
+++ b/nationalization/internal/languages/fa.json
@@ -72,6 +72,10 @@
           "Title": "واقع‌گرایی (هنر)"
         },
         {
+          "ID": 18259,
+          "Title": "پاگنده"
+        },
+        {
           "ID": 18574,
           "Title": "آبجو"
         },
@@ -142,6 +146,10 @@
         {
           "ID": 323818,
           "Title": "پاستا"
+        },
+        {
+          "ID": 364266,
+          "Title": "ته‌دیگ"
         },
         {
           "ID": 401159,
@@ -422,6 +430,10 @@
           "Title": "رده:برنامه‌ریزی و طراحی شهری"
         },
         {
+          "ID": 966017,
+          "Title": "رده:یادبودها و یادواره‌ها"
+        },
+        {
           "ID": 1614323,
           "Title": "رده:فهرست‌های جغرافیایی"
         },
@@ -454,6 +466,10 @@
         {
           "ID": 347683,
           "Title": "کارلزبد، نیومکزیکو"
+        },
+        {
+          "ID": 862074,
+          "Title": "هرم"
         },
         {
           "ID": 4495983,
@@ -692,6 +708,10 @@
           "Title": "فلامینگو"
         },
         {
+          "ID": 91510,
+          "Title": "باد بیش‌وز"
+        },
+        {
           "ID": 112757,
           "Title": "پرتقال"
         },
@@ -812,6 +832,10 @@
           "Title": "چرخ‌ریسک خزری"
         },
         {
+          "ID": 3195095,
+          "Title": "نخل (سرده)"
+        },
+        {
           "ID": 3239388,
           "Title": "اریگانوم اونیتس"
         },
@@ -856,6 +880,10 @@
         {
           "ID": 112317,
           "Title": "رده:افراد"
+        },
+        {
+          "ID": 115857,
+          "Title": "رده:زنان"
         },
         {
           "ID": 204413,
@@ -1114,14 +1142,6 @@
           "Title": "رده:دین"
         },
         {
-          "ID": 61453,
-          "Title": "رده:اسطوره‌شناسی"
-        },
-        {
-          "ID": 147962,
-          "Title": "رده:نظریه‌های فلسفی"
-        },
-        {
           "ID": 260506,
           "Title": "رده:سکولاریسم"
         },
@@ -1174,6 +1194,10 @@
         {
           "ID": 1814110,
           "Title": "رده:حق"
+        },
+        {
+          "ID": 3670360,
+          "Title": "رده:دانشگاه‌ها و کالج‌ها بر پایه کشور"
         }
       ],
       "Articles": [
@@ -1604,10 +1628,6 @@
         {
           "ID": 692646,
           "Title": "دانشگاه منچستر"
-        },
-        {
-          "ID": 731323,
-          "Title": "تراست"
         },
         {
           "ID": 777819,
