--- a/nationalization/internal/languages/he.json
+++ b/nationalization/internal/languages/he.json
@@ -84,8 +84,16 @@
           "Title": "בירה"
         },
         {
+          "ID": 37972,
+          "Title": "ביגפוט"
+        },
+        {
           "ID": 40420,
           "Title": "רוח רפאים"
+        },
+        {
+          "ID": 42869,
+          "Title": "ריאליזם (אמנות)"
         },
         {
           "ID": 46123,
@@ -358,6 +366,10 @@
           "Title": "קטגוריה:גאוגרפיה"
         },
         {
+          "ID": 78480,
+          "Title": "קטגוריה:אנדרטאות"
+        },
+        {
           "ID": 298806,
           "Title": "קטגוריה:תכנון עירוני"
         },
@@ -371,6 +383,10 @@
         }
       ],
       "Articles": [
+        {
+          "ID": 5682,
+          "Title": "פירמידה (מבנה)"
+        },
         {
           "ID": 9957,
           "Title": "ונציה"
@@ -720,6 +736,10 @@
           "Title": "קטגוריה:אמנים לפי תחום"
         },
         {
+          "ID": 1079650,
+          "Title": "קטגוריה:נשים"
+        },
+        {
           "ID": 1248951,
           "Title": "קטגוריה:עצמי"
         }
@@ -948,10 +968,6 @@
           "Title": "קטגוריה:דתות"
         },
         {
-          "ID": 22827,
-          "Title": "קטגוריה:מיתולוגיה"
-        },
-        {
           "ID": 25239,
           "Title": "קטגוריה:רוחניות ואמונה"
         },
@@ -966,12 +982,6 @@
         {
           "ID": 705199,
           "Title": "קטגוריה:חילוניות"
-        }
-      ],
-      "Articles": [
-        {
-          "ID": 261332,
-          "Title": "גרגרנות"
         }
       ]
     },
@@ -994,6 +1004,10 @@
         {
           "ID": 353812,
           "Title": "קטגוריה:חברה"
+        },
+        {
+          "ID": 1060666,
+          "Title": "קטגוריה:אוניברסיטאות ומכללות לפי מדינה"
         },
         {
           "ID": 1592502,
