--- a/nationalization/internal/languages/hi.json
+++ b/nationalization/internal/languages/hi.json
@@ -152,6 +152,10 @@
           "Title": "काबिल"
         },
         {
+          "ID": 734778,
+          "Title": "यथार्थवाद (कला)"
+        },
+        {
           "ID": 767997,
           "Title": "अण्डा (खाद्य)"
         },
@@ -168,6 +172,10 @@
         {
           "ID": 1522,
           "Title": "श्रेणी:भूगोल"
+        },
+        {
+          "ID": 5006,
+          "Title": "श्रेणी:स्मारक"
         },
         {
           "ID": 72298,
@@ -206,6 +214,10 @@
         {
           "ID": 14422,
           "Title": "क्वीन्सलैण्ड"
+        },
+        {
+          "ID": 51254,
+          "Title": "पिरामिड आकार"
         }
       ]
     },
@@ -692,10 +704,6 @@
           "Title": "श्रेणी:धर्म"
         },
         {
-          "ID": 11030,
-          "Title": "श्रेणी:पौराणिक कथाएँ"
-        },
-        {
           "ID": 475295,
           "Title": "श्रेणी:विश्वास"
         },
@@ -706,10 +714,6 @@
         {
           "ID": 637544,
           "Title": "श्रेणी:धर्म की समालोचना"
-        },
-        {
-          "ID": 660163,
-          "Title": "श्रेणी:दार्शनिक सिद्धान्त"
         },
         {
           "ID": 720255,
