--- a/nationalization/internal/languages/hy.json
+++ b/nationalization/internal/languages/hy.json
@@ -242,6 +242,10 @@
           "Title": "Կատեգորիա:Քաղաքաշինություն"
         },
         {
+          "ID": 22139,
+          "Title": "Կատեգորիա:Կոթողներ"
+        },
+        {
           "ID": 512468,
           "Title": "Կատեգորիա:Ցանկեր:Աշխարհագրություն"
         },
@@ -274,6 +278,10 @@
         {
           "ID": 94132,
           "Title": "Քվինսլենդ (նահանգ)"
+        },
+        {
+          "ID": 628434,
+          "Title": "Բուրգ (ճարտարապետություն)"
         }
       ]
     },
@@ -300,6 +308,10 @@
         {
           "ID": 93448,
           "Title": "Կատեգորիա:Առողջապահական գիտություններ"
+        },
+        {
+          "ID": 495177,
+          "Title": "Կատեգորիա:Ժառանգական հիվանդություններ"
         },
         {
           "ID": 855537,
@@ -510,6 +522,10 @@
           "Title": "Սպիտակ վագր"
         },
         {
+          "ID": 578527,
+          "Title": "Փյունիկյան արմավենի"
+        },
+        {
           "ID": 893342,
           "Title": "Շեկ մազեր"
         }
@@ -530,6 +546,10 @@
         {
           "ID": 15612,
           "Title": "Կատեգորիա:Անձնական կյանք"
+        },
+        {
+          "ID": 318357,
+          "Title": "Կատեգորիա:Կին"
         },
         {
           "ID": 580187,
@@ -760,14 +780,6 @@
           "Title": "Կատեգորիա:Կրոն"
         },
         {
-          "ID": 14951,
-          "Title": "Կատեգորիա:Դիցաբանություն"
-        },
-        {
-          "ID": 20096,
-          "Title": "Կատեգորիա:Փիլիսոփայական տեսություններ"
-        },
-        {
           "ID": 27568,
           "Title": "Կատեգորիա:Աշխարհի կրոններ"
         },
@@ -812,6 +824,10 @@
         {
           "ID": 25741,
           "Title": "Կատեգորիա:Իգապաշտպանություն"
+        },
+        {
+          "ID": 412571,
+          "Title": "Կատեգորիա:Բարձրագույն ուսումնական հաստատություններ ըստ երկրի"
         }
       ],
       "Articles": [
