--- a/nationalization/internal/languages/ja.json
+++ b/nationalization/internal/languages/ja.json
@@ -22,6 +22,10 @@
           "Title": "Category:映画作品"
         },
         {
+          "ID": 115048,
+          "Title": "Category:食文化"
+        },
+        {
           "ID": 125936,
           "Title": "Category:スポーツ"
         },
@@ -102,6 +106,10 @@
         {
           "ID": 30113,
           "Title": "ネッシー"
+        },
+        {
+          "ID": 31436,
+          "Title": "ビッグフット"
         },
         {
           "ID": 45263,
@@ -282,6 +290,10 @@
         {
           "ID": 1306123,
           "Title": "ロケット祭り (東南アジア)"
+        },
+        {
+          "ID": 1327677,
+          "Title": "お焦げ"
         },
         {
           "ID": 1352625,
@@ -508,6 +520,10 @@
         {
           "ID": 1769173,
           "Title": "Category:地形学"
+        },
+        {
+          "ID": 2906361,
+          "Title": "Category:モニュメントと記念建造物"
         }
       ],
       "Articles": [
@@ -518,6 +534,10 @@
         {
           "ID": 30053,
           "Title": "ヴェネツィア"
+        },
+        {
+          "ID": 30569,
+          "Title": "ピラミッド"
         },
         {
           "ID": 81430,
@@ -722,10 +742,6 @@
           "Title": "Category:災害"
         },
         {
-          "ID": 149406,
-          "Title": "Category:化学物質"
-        },
-        {
           "ID": 189602,
           "Title": "Category:動物学"
         },
@@ -836,6 +852,10 @@
           "Title": "運動器"
         },
         {
+          "ID": 399020,
+          "Title": "卓越風"
+        },
+        {
           "ID": 408046,
           "Title": "コッカー・スパニエル"
         },
@@ -878,6 +898,10 @@
         {
           "ID": 2905859,
           "Title": "カツオドリ属"
+        },
+        {
+          "ID": 3846503,
+          "Title": "ナツメヤシ属"
         }
       ]
     },
@@ -896,6 +920,10 @@
         {
           "ID": 192838,
           "Title": "Category:人物"
+        },
+        {
+          "ID": 472831,
+          "Title": "Category:女性"
         },
         {
           "ID": 2904417,
@@ -1164,14 +1192,6 @@
         {
           "ID": 103671,
           "Title": "Category:宗教"
-        },
-        {
-          "ID": 682644,
-          "Title": "Category:神話学"
-        },
-        {
-          "ID": 1919197,
-          "Title": "Category:哲学の理論"
         },
         {
           "ID": 2051086,
@@ -1788,10 +1808,6 @@
         {
           "ID": 1864385,
           "Title": "ハル大学"
-        },
-        {
-          "ID": 1870850,
-          "Title": "旧正月"
         },
         {
           "ID": 1879778,
