--- a/nationalization/internal/languages/ka.json
+++ b/nationalization/internal/languages/ka.json
@@ -60,6 +60,10 @@
           "Title": "ბაკინგემის სასახლე"
         },
         {
+          "ID": 14271,
+          "Title": "რეალიზმი"
+        },
+        {
           "ID": 19105,
           "Title": "პური"
         },
@@ -164,6 +168,10 @@
         {
           "ID": 401446,
           "Title": "კატეგორია:ადგილი"
+        },
+        {
+          "ID": 405476,
+          "Title": "კატეგორია:ძეგლები"
         },
         {
           "ID": 413695,
@@ -426,6 +434,10 @@
           "Title": "სკუმბრია"
         },
         {
+          "ID": 266126,
+          "Title": "ფინიკის პალმა"
+        },
+        {
           "ID": 316824,
           "Title": "კვების ჯაჭვი"
         },
@@ -447,6 +459,10 @@
       "ID": 2147483643,
       "Title": "People and self",
       "Categories": [
+        {
+          "ID": 29815,
+          "Title": "კატეგორია:ქალები"
+        },
         {
           "ID": 44550,
           "Title": "კატეგორია:ადამიანები"
@@ -656,10 +672,6 @@
           "Title": "კატეგორია:რელიგია"
         },
         {
-          "ID": 5705,
-          "Title": "კატეგორია:მითოლოგია"
-        },
-        {
           "ID": 9275,
           "Title": "კატეგორია:რელიგიები"
         },
@@ -670,10 +682,6 @@
         {
           "ID": 43788,
           "Title": "კატეგორია:დჰარმული რელიგიები"
-        },
-        {
-          "ID": 44310,
-          "Title": "კატეგორია:ფილოსოფიური თეორიები"
         },
         {
           "ID": 322697,
@@ -712,6 +720,10 @@
         {
           "ID": 45582,
           "Title": "კატეგორია:უფლებები"
+        },
+        {
+          "ID": 50059,
+          "Title": "კატეგორია:უმაღლესი სასწავლებლები ქვეყნების მიხედვით"
         }
       ],
       "Articles": [
