--- a/nationalization/internal/languages/ko.json
+++ b/nationalization/internal/languages/ko.json
@@ -84,6 +84,10 @@
           "Title": "레드 제플린"
         },
         {
+          "ID": 61313,
+          "Title": "누룽지"
+        },
+        {
           "ID": 66498,
           "Title": "빵"
         },
@@ -230,6 +234,10 @@
         {
           "ID": 570030,
           "Title": "삶은 달걀"
+        },
+        {
+          "ID": 576436,
+          "Title": "빅풋"
         },
         {
           "ID": 576569,
@@ -518,11 +526,19 @@
           "Title": "분류:지형학"
         },
         {
+          "ID": 423149,
+          "Title": "분류:기념물"
+        },
+        {
           "ID": 597518,
           "Title": "분류:지리에 관한 목록"
         }
       ],
       "Articles": [
+        {
+          "ID": 6150,
+          "Title": "피라미드"
+        },
         {
           "ID": 7567,
           "Title": "파리 (프랑스)"
@@ -824,6 +840,10 @@
           "Title": "파인애플"
         },
         {
+          "ID": 149611,
+          "Title": "탁월풍"
+        },
+        {
           "ID": 215911,
           "Title": "물의 순환"
         },
@@ -924,6 +944,10 @@
         {
           "ID": 37928,
           "Title": "분류:사람"
+        },
+        {
+          "ID": 81899,
+          "Title": "분류:여성"
         },
         {
           "ID": 84383,
@@ -1190,16 +1214,8 @@
           "Title": "분류:세속주의"
         },
         {
-          "ID": 156935,
-          "Title": "분류:신화학"
-        },
-        {
           "ID": 530356,
           "Title": "분류:종교 인류학"
-        },
-        {
-          "ID": 542365,
-          "Title": "분류:철학 이론"
         },
         {
           "ID": 548406,
@@ -1238,6 +1254,10 @@
         {
           "ID": 758761,
           "Title": "분류:사회과학"
+        },
+        {
+          "ID": 1838789,
+          "Title": "분류:나라별 고등교육기관"
         }
       ],
       "Articles": [
