--- a/nationalization/internal/languages/mk.json
+++ b/nationalization/internal/languages/mk.json
@@ -76,6 +76,10 @@
           "Title": "Чоколадо"
         },
         {
+          "ID": 66083,
+          "Title": "Реализам (сликарство)"
+        },
+        {
           "ID": 67375,
           "Title": "AC/DC"
         },
@@ -164,6 +168,10 @@
           "Title": "Салата од тестенини"
         },
         {
+          "ID": 1206526,
+          "Title": "Големото стапало"
+        },
+        {
           "ID": 1211297,
           "Title": "Сланина"
         },
@@ -184,6 +192,10 @@
         {
           "ID": 19262,
           "Title": "Категорија:Геоморфологија"
+        },
+        {
+          "ID": 22526,
+          "Title": "Категорија:Споменици"
         },
         {
           "ID": 100940,
@@ -218,6 +230,10 @@
         {
           "ID": 65614,
           "Title": "Квинсленд"
+        },
+        {
+          "ID": 1082918,
+          "Title": "Пирамида (архитектура)"
         }
       ]
     },
@@ -484,6 +500,10 @@
           "Title": "Категорија:Презимиња"
         },
         {
+          "ID": 37075,
+          "Title": "Категорија:Жени"
+        },
+        {
           "ID": 1062312,
           "Title": "Категорија:Филмски ликови"
         },
@@ -672,16 +692,8 @@
           "Title": "Категорија:Религија"
         },
         {
-          "ID": 10016,
-          "Title": "Категорија:Митологија"
-        },
-        {
           "ID": 15122,
           "Title": "Категорија:Религиозни верувања, традиции и движења"
-        },
-        {
-          "ID": 17959,
-          "Title": "Категорија:Филозофски теории"
         },
         {
           "ID": 19691,
