--- a/nationalization/internal/languages/ml.json
+++ b/nationalization/internal/languages/ml.json
@@ -84,10 +84,6 @@
           "Title": "ബിസ്കറ്റ്"
         },
         {
-          "ID": 198175,
-          "Title": "യഥാതഥ്യപ്രസ്ഥാനം"
-        },
-        {
           "ID": 222659,
           "Title": "ഹോട്ട് ഡോഗ്"
         },
@@ -102,6 +98,10 @@
         {
           "ID": 300568,
           "Title": "പി.കെ (ചലച്ചിത്രം)"
+        },
+        {
+          "ID": 338690,
+          "Title": "ബിഗ്‌ഫൂട്ട്"
         },
         {
           "ID": 351944,
@@ -146,6 +146,10 @@
           "Title": "വർഗ്ഗം:സ്ഥലങ്ങൾ"
         },
         {
+          "ID": 208223,
+          "Title": "വർഗ്ഗം:നഗരാസൂത്രണം"
+        },
+        {
           "ID": 363853,
           "Title": "വർഗ്ഗം:ഭൂമിശാസ്ത്രവുമായി ബന്ധപ്പെട്ട പട്ടികകൾ"
         }
@@ -162,6 +166,10 @@
         {
           "ID": 42679,
           "Title": "പാരിസ്"
+        },
+        {
+          "ID": 47943,
+          "Title": "പിരമിഡ്"
         },
         {
           "ID": 268026,
@@ -184,10 +192,6 @@
         {
           "ID": 31886,
           "Title": "വർഗ്ഗം:ആരോഗ്യം"
-        },
-        {
-          "ID": 441006,
-          "Title": "വർഗ്ഗം:വൈദ്യശാസ്ത്രശാഖകൾ"
         },
         {
           "ID": 456507,
@@ -322,6 +326,10 @@
           "Title": "കൈതച്ചക്ക"
         },
         {
+          "ID": 12245,
+          "Title": "ഈന്തപ്പഴം"
+        },
+        {
           "ID": 14564,
           "Title": "ഗോതമ്പ്"
         },
@@ -426,6 +434,10 @@
         {
           "ID": 53831,
           "Title": "വർഗ്ഗം:വ്യക്തികൾ"
+        },
+        {
+          "ID": 275926,
+          "Title": "വർഗ്ഗം:സ്ത്രീകൾ"
         },
         {
           "ID": 371157,
@@ -630,14 +642,6 @@
         {
           "ID": 338424,
           "Title": "വർഗ്ഗം:വിശ്വാസം"
-        },
-        {
-          "ID": 359418,
-          "Title": "വർഗ്ഗം:പുരാവൃത്തവിജ്ഞാനം"
-        },
-        {
-          "ID": 446436,
-          "Title": "വർഗ്ഗം:തത്ത്വശാസ്ത്രപരമായ സിദ്ധാന്തങ്ങൾ"
         }
       ]
     },
