--- a/nationalization/internal/languages/mn.json
+++ b/nationalization/internal/languages/mn.json
@@ -92,6 +92,10 @@
         {
           "ID": 64707,
           "Title": "Ангилал:Газарзүйн жагсаалт"
+        },
+        {
+          "ID": 65198,
+          "Title": "Ангилал:Хөшөө"
         }
       ],
       "Articles": [
@@ -308,10 +312,6 @@
       "Title": "People and self",
       "Categories": [
         {
-          "ID": 1882,
-          "Title": "Ангилал:Амьдрал"
-        },
-        {
           "ID": 3657,
           "Title": "Ангилал:Өдөр тутмын соёл"
         },
@@ -322,6 +322,10 @@
         {
           "ID": 25369,
           "Title": "Ангилал:Хүн"
+        },
+        {
+          "ID": 39601,
+          "Title": "Ангилал:Эмэгтэйчүүд"
         }
       ],
       "Articles": [
@@ -458,10 +462,6 @@
         {
           "ID": 66790,
           "Title": "Ангилал:Шашнууд"
-        },
-        {
-          "ID": 70654,
-          "Title": "Ангилал:Үлгэр домог судлал"
         }
       ]
     },
@@ -484,6 +484,10 @@
         {
           "ID": 69696,
           "Title": "Ангилал:Феминизм"
+        },
+        {
+          "ID": 70391,
+          "Title": "Ангилал:Дээд сургууль улс орноор"
         }
       ],
       "Articles": [
