--- a/nationalization/internal/languages/sr.json
+++ b/nationalization/internal/languages/sr.json
@@ -96,6 +96,10 @@
           "Title": "AC/DC"
         },
         {
+          "ID": 137590,
+          "Title": "Бигфут"
+        },
+        {
           "ID": 138811,
           "Title": "Пица"
         },
@@ -106,6 +110,10 @@
         {
           "ID": 146980,
           "Title": "Književni realizam"
+        },
+        {
+          "ID": 161848,
+          "Title": "Реализам (уметност)"
         },
         {
           "ID": 185347,
@@ -190,6 +198,10 @@
           "Title": "Категорија:Географија"
         },
         {
+          "ID": 39039,
+          "Title": "Категорија:Споменици"
+        },
+        {
           "ID": 75713,
           "Title": "Категорија:Геоморфологија"
         },
@@ -218,6 +230,10 @@
         {
           "ID": 32055,
           "Title": "Мјанмар"
+        },
+        {
+          "ID": 44038,
+          "Title": "Пирамиде"
         },
         {
           "ID": 144640,
@@ -724,20 +740,12 @@
       "Title": "Religion and belief systems",
       "Categories": [
         {
-          "ID": 11626,
-          "Title": "Категорија:Митологија"
-        },
-        {
           "ID": 15828,
           "Title": "Категорија:Религија"
         },
         {
           "ID": 253954,
           "Title": "Категорија:Верске традиције и покрети"
-        },
-        {
-          "ID": 495567,
-          "Title": "Категорија:Филозофске теорије"
         },
         {
           "ID": 524564,
@@ -750,12 +758,6 @@
         {
           "ID": 621828,
           "Title": "Категорија:Секуларизам"
-        }
-      ],
-      "Articles": [
-        {
-          "ID": 3929751,
-          "Title": "Proždrljivost"
         }
       ]
     },
@@ -778,6 +780,10 @@
         {
           "ID": 115944,
           "Title": "Категорија:Феминизам"
+        },
+        {
+          "ID": 3889312,
+          "Title": "Категорија:Универзитети по државама"
         }
       ],
       "Articles": [
