--- a/nationalization/internal/languages/th.json
+++ b/nationalization/internal/languages/th.json
@@ -100,6 +100,10 @@
           "Title": "เนสซี"
         },
         {
+          "ID": 63019,
+          "Title": "บิ๊กฟุต"
+        },
+        {
           "ID": 92316,
           "Title": "ไส้อั่ว"
         },
@@ -326,6 +330,10 @@
           "Title": "หมวดหมู่:ภูมิศาสตร์"
         },
         {
+          "ID": 18084,
+          "Title": "หมวดหมู่:อนุสาวรีย์"
+        },
+        {
           "ID": 60430,
           "Title": "หมวดหมู่:ธรณีสัณฐานวิทยา"
         },
@@ -354,6 +362,10 @@
         {
           "ID": 94035,
           "Title": "เวนิส"
+        },
+        {
+          "ID": 197575,
+          "Title": "พีระมิด"
         },
         {
           "ID": 268894,
@@ -642,6 +654,10 @@
           "Title": "โซ่อาหาร"
         },
         {
+          "ID": 521625,
+          "Title": "สกุลฟีนิกซ์"
+        },
+        {
           "ID": 683155,
           "Title": "นกบูบี"
         },
@@ -682,6 +698,10 @@
         {
           "ID": 45138,
           "Title": "หมวดหมู่:นามสกุล"
+        },
+        {
+          "ID": 261935,
+          "Title": "หมวดหมู่:ผู้หญิง"
         },
         {
           "ID": 329750,
@@ -898,14 +918,6 @@
         {
           "ID": 5655,
           "Title": "หมวดหมู่:ความเชื่อ"
-        },
-        {
-          "ID": 190117,
-          "Title": "หมวดหมู่:ปรัมปราวิทยา"
-        },
-        {
-          "ID": 398734,
-          "Title": "หมวดหมู่:ทฤษฎีปรัชญา"
         },
         {
           "ID": 578917,
