--- a/nationalization/internal/languages/uk.json
+++ b/nationalization/internal/languages/uk.json
@@ -10,6 +10,10 @@
           "Title": "Категорія:Культура"
         },
         {
+          "ID": 13445,
+          "Title": "Категорія:Харчування"
+        },
+        {
           "ID": 13449,
           "Title": "Категорія:Мистецтво"
         },
@@ -236,6 +240,10 @@
           "Title": "M\u0026M's"
         },
         {
+          "ID": 1551860,
+          "Title": "Бігфут"
+        },
+        {
           "ID": 1558789,
           "Title": "Безалкогольне пиво"
         },
@@ -286,6 +294,10 @@
         {
           "ID": 1919274,
           "Title": "Флойд Мейвезер проти Менні Пак'яо"
+        },
+        {
+          "ID": 1935332,
+          "Title": "Реалізм (мистецтво)"
         },
         {
           "ID": 1936713,
@@ -362,6 +374,10 @@
           "Title": "Категорія:Містобудування"
         },
         {
+          "ID": 196285,
+          "Title": "Категорія:Монументи і меморіали"
+        },
+        {
           "ID": 1038748,
           "Title": "Категорія:Місця"
         },
@@ -386,6 +402,10 @@
         {
           "ID": 25615,
           "Title": "Квінсленд"
+        },
+        {
+          "ID": 31223,
+          "Title": "Піраміда (споруда)"
         },
         {
           "ID": 108574,
@@ -696,6 +716,10 @@
           "Title": "Білий тигр"
         },
         {
+          "ID": 790771,
+          "Title": "Переважаючі вітри"
+        },
+        {
           "ID": 969434,
           "Title": "Лось звичайний"
         },
@@ -710,6 +734,10 @@
         {
           "ID": 1225323,
           "Title": "Стрункі панцирні веретільниці"
+        },
+        {
+          "ID": 1283209,
+          "Title": "Фінікова пальма"
         },
         {
           "ID": 1365937,
@@ -792,6 +820,10 @@
         {
           "ID": 52818,
           "Title": "Категорія:Особисте життя"
+        },
+        {
+          "ID": 59539,
+          "Title": "Категорія:Жінки"
         },
         {
           "ID": 84294,
@@ -1042,16 +1074,8 @@
       "Title": "Religion and belief systems",
       "Categories": [
         {
-          "ID": 13434,
-          "Title": "Категорія:Міфологія"
-        },
-        {
           "ID": 13456,
           "Title": "Категорія:Релігія"
-        },
-        {
-          "ID": 814150,
-          "Title": "Категорія:Філософські теорії"
         },
         {
           "ID": 891422,
@@ -1077,12 +1101,6 @@
           "ID": 2785010,
           "Title": "Категорія:Антропологія релігії"
         }
-      ],
-      "Articles": [
-        {
-          "ID": 193019,
-          "Title": "Ненажерливість"
-        }
       ]
     },
     {
@@ -1100,6 +1118,10 @@
         {
           "ID": 27531,
           "Title": "Категорія:Фемінізм"
+        },
+        {
+          "ID": 194790,
+          "Title": "Категорія:Вищі навчальні заклади за країною"
         },
         {
           "ID": 967078,
