--- a/nationalization/internal/languages/ur.json
+++ b/nationalization/internal/languages/ur.json
@@ -154,6 +154,10 @@
           "Title": "زمرہ:شہری منصوبہ بندی"
         },
         {
+          "ID": 78764,
+          "Title": "زمرہ:یادگاریں"
+        },
+        {
           "ID": 99072,
           "Title": "زمرہ:جغرافیائی فہرستیں"
         }
@@ -174,6 +178,10 @@
         {
           "ID": 47857,
           "Title": "کینبرا"
+        },
+        {
+          "ID": 57130,
+          "Title": "ہرم"
         },
         {
           "ID": 114426,
@@ -454,6 +462,10 @@
         {
           "ID": 52757,
           "Title": "زمرہ:ذاتی زندگی"
+        },
+        {
+          "ID": 70929,
+          "Title": "زمرہ:خواتین"
         }
       ],
       "Articles": [
@@ -620,10 +632,6 @@
       "Title": "Religion and belief systems",
       "Categories": [
         {
-          "ID": 3241,
-          "Title": "زمرہ:علم الاساطیر"
-        },
-        {
           "ID": 3705,
           "Title": "زمرہ:مذہب"
         },
@@ -638,10 +646,6 @@
         {
           "ID": 52693,
           "Title": "زمرہ:اعتقاد"
-        },
-        {
-          "ID": 53263,
-          "Title": "زمرہ:فلسفیانہ نظریات"
         },
         {
           "ID": 67766,
@@ -684,6 +688,10 @@
         {
           "ID": 54101,
           "Title": "زمرہ:نسوانیت"
+        },
+        {
+          "ID": 550209,
+          "Title": "زمرہ:جامعات و کالج بلحاظ ملک"
         }
       ],
       "Articles": [
