--- a/nationalization/internal/languages/vi.json
+++ b/nationalization/internal/languages/vi.json
@@ -136,6 +136,10 @@
           "Title": "Bánh pía"
         },
         {
+          "ID": 405833,
+          "Title": "Chủ nghĩa hiện thực"
+        },
+        {
           "ID": 528985,
           "Title": "Giăm bông"
         },
@@ -236,12 +240,20 @@
           "Title": "The Wanted"
         },
         {
+          "ID": 2220678,
+          "Title": "Bigfoot"
+        },
+        {
           "ID": 2264083,
           "Title": "Pinus cembroides"
         },
         {
           "ID": 2360468,
           "Title": "Bánh ngọt"
+        },
+        {
+          "ID": 2421945,
+          "Title": "Cơm cháy"
         },
         {
           "ID": 2439303,
@@ -354,6 +366,10 @@
           "Title": "Thể loại:Quy hoạch đô thị"
         },
         {
+          "ID": 14213,
+          "Title": "Thể loại:Tượng đài"
+        },
+        {
           "ID": 39431,
           "Title": "Thể loại:Địa mạo học"
         },
@@ -374,6 +390,10 @@
         {
           "ID": 24176,
           "Title": "Myanmar"
+        },
+        {
+          "ID": 40074,
+          "Title": "Kim tự tháp"
         },
         {
           "ID": 52273,
@@ -592,6 +612,10 @@
         {
           "ID": 32564,
           "Title": "Gạo"
+        },
+        {
+          "ID": 35528,
+          "Title": "Chi Chà là"
         },
         {
           "ID": 36522,
@@ -820,6 +844,10 @@
           "Title": "Thể loại:Nhân vật trong phim"
         },
         {
+          "ID": 2979924,
+          "Title": "Thể loại:Nữ giới"
+        },
+        {
           "ID": 3171170,
           "Title": "Thể loại:Nghệ sĩ theo phương tiện"
         }
@@ -1044,16 +1072,8 @@
           "Title": "Thể loại:Tôn giáo"
         },
         {
-          "ID": 58329,
-          "Title": "Thể loại:Thần thoại"
-        },
-        {
           "ID": 65113,
           "Title": "Thể loại:Tôn giáo Ấn Độ"
-        },
-        {
-          "ID": 1680538,
-          "Title": "Thể loại:Lý thuyết triết học"
         },
         {
           "ID": 3211724,
@@ -1100,6 +1120,10 @@
         {
           "ID": 32787,
           "Title": "Thể loại:Khoa học xã hội"
+        },
+        {
+          "ID": 88920,
+          "Title": "Thể loại:Trường đại học và cao đẳng theo quốc gia"
         },
         {
           "ID": 263145,
