--- a/nationalization/internal/languages/zh-min-nan.json
+++ b/nationalization/internal/languages/zh-min-nan.json
@@ -96,6 +96,10 @@
           "Title": "Ke-nn̄g-ko"
         },
         {
+          "ID": 653025,
+          "Title": "Hiān-si̍t-chú-gī (gē-su̍t)"
+        },
+        {
           "ID": 722609,
           "Title": "Hoan-á-piáⁿ"
         }
@@ -130,6 +134,10 @@
         {
           "ID": 9393,
           "Title": "Pa-lí"
+        },
+        {
+          "ID": 9688,
+          "Title": "Kim-jī-thah"
         },
         {
           "ID": 13261,
@@ -362,6 +370,10 @@
         {
           "ID": 38840,
           "Title": "Lūi-pia̍t:Sèⁿ-sī"
+        },
+        {
+          "ID": 587156,
+          "Title": "Lūi-pia̍t:Lú-sèng"
         }
       ],
       "Articles": [
@@ -514,10 +526,6 @@
         {
           "ID": 1728,
           "Title": "Lūi-pia̍t:Chong-kàu"
-        },
-        {
-          "ID": 584706,
-          "Title": "Lūi-pia̍t:Tiat-ha̍k ê lí-lūn"
         },
         {
           "ID": 627915,
