--- a/nationalization/internal/languages/zh.json
+++ b/nationalization/internal/languages/zh.json
@@ -128,6 +128,10 @@
           "Title": "齐柏林飞船 (乐团)"
         },
         {
+          "ID": 152143,
+          "Title": "现实主义"
+        },
+        {
           "ID": 153070,
           "Title": "生啤酒"
         },
@@ -244,6 +248,10 @@
           "Title": "比尔森啤酒"
         },
         {
+          "ID": 721190,
+          "Title": "大腳怪"
+        },
+        {
           "ID": 818063,
           "Title": "贞操"
         },
@@ -302,6 +310,10 @@
         {
           "ID": 1405625,
           "Title": "愤怒的小鸟 (游戏)"
+        },
+        {
+          "ID": 1521731,
+          "Title": "鍋巴"
         },
         {
           "ID": 1527980,
@@ -492,6 +504,10 @@
         {
           "ID": 1569150,
           "Title": "Category:地方"
+        },
+        {
+          "ID": 1575369,
+          "Title": "Category:纪念性建筑物"
         }
       ],
       "Articles": [
@@ -518,6 +534,10 @@
         {
           "ID": 176034,
           "Title": "昆士蘭州"
+        },
+        {
+          "ID": 815231,
+          "Title": "金字塔"
         }
       ]
     },
@@ -892,6 +912,10 @@
           "Title": "发芽"
         },
         {
+          "ID": 2751960,
+          "Title": "刺葵属"
+        },
+        {
           "ID": 2871944,
           "Title": "新西蘭喉盤魚"
         },
@@ -906,6 +930,10 @@
         {
           "ID": 3497989,
           "Title": "森林凤梨草莓"
+        },
+        {
+          "ID": 3938321,
+          "Title": "盛行风"
         },
         {
           "ID": 5196769,
@@ -940,6 +968,10 @@
         {
           "ID": 58248,
           "Title": "Category:姓氏"
+        },
+        {
+          "ID": 103291,
+          "Title": "Category:女性"
         },
         {
           "ID": 338830,
@@ -1202,20 +1234,12 @@
           "Title": "Category:宗教"
         },
         {
-          "ID": 36791,
-          "Title": "Category:神话"
-        },
-        {
           "ID": 42492,
           "Title": "Category:信仰"
         },
         {
           "ID": 406631,
           "Title": "Category:各種宗教宗派及運動"
-        },
-        {
-          "ID": 544680,
-          "Title": "Category:哲学理论"
         },
         {
           "ID": 1244640,
@@ -1232,12 +1256,6 @@
         {
           "ID": 1244655,
           "Title": "Category:非有神論"
-        }
-      ],
-      "Articles": [
-        {
-          "ID": 165665,
-          "Title": "貪食"
         }
       ]
     },
@@ -1264,6 +1282,10 @@
         {
           "ID": 414585,
           "Title": "Category:社会"
+        },
+        {
+          "ID": 3759987,
+          "Title": "Category:各国高等院校"
         }
       ],
       "Articles": [
