--- a/nationalization/internal/languages/ru.json
+++ b/nationalization/internal/languages/ru.json
@@ -84,6 +84,10 @@
           "Title": "Кофе"
         },
         {
+          "ID": 45228,
+          "Title": "Бигфут"
+        },
+        {
           "ID": 47838,
           "Title": "Пильзнер"
         },
@@ -332,6 +336,10 @@
           "Title": "Мясо рукокрылых"
         },
         {
+          "ID": 5244785,
+          "Title": "Реализм (искусство)"
+        },
+        {
           "ID": 5398522,
           "Title": "Печенье с предсказанием"
         },
@@ -450,6 +458,10 @@
           "Title": "Категория:Геоморфология"
         },
         {
+          "ID": 84846,
+          "Title": "Категория:Памятники"
+        },
+        {
           "ID": 901646,
           "Title": "Категория:Градостроительство"
         },
@@ -482,6 +494,10 @@
         {
           "ID": 106302,
           "Title": "Квинсленд"
+        },
+        {
+          "ID": 635600,
+          "Title": "Пирамида (архитектура)"
         },
         {
           "ID": 1653472,
@@ -736,10 +752,6 @@
           "Title": "Яички"
         },
         {
-          "ID": 75788,
-          "Title": "Скумбрии"
-        },
-        {
           "ID": 89597,
           "Title": "Пищевая цепь"
         },
@@ -754,6 +766,10 @@
         {
           "ID": 167166,
           "Title": "Лимон"
+        },
+        {
+          "ID": 168028,
+          "Title": "Финиковая пальма"
         },
         {
           "ID": 206096,
@@ -848,6 +864,10 @@
           "Title": "Коаты"
         },
         {
+          "ID": 2838616,
+          "Title": "Преимущественные ветры"
+        },
+        {
           "ID": 3683860,
           "Title": "Ель Энгельмана"
         },
@@ -900,6 +920,10 @@
         {
           "ID": 54337,
           "Title": "Категория:Фамилии"
+        },
+        {
+          "ID": 201758,
+          "Title": "Категория:Женщины"
         },
         {
           "ID": 246361,
@@ -1182,10 +1206,6 @@
       "Title": "Religion and belief systems",
       "Categories": [
         {
-          "ID": 7868,
-          "Title": "Категория:Мифология"
-        },
-        {
           "ID": 7976,
           "Title": "Категория:Религия"
         },
@@ -1206,10 +1226,6 @@
           "Title": "Категория:Религии"
         },
         {
-          "ID": 3149300,
-          "Title": "Категория:Философские теории"
-        },
-        {
           "ID": 4803973,
           "Title": "Категория:Религиозные споры"
         },
@@ -1220,12 +1236,6 @@
         {
           "ID": 6090867,
           "Title": "Категория:Антропология религии"
-        }
-      ],
-      "Articles": [
-        {
-          "ID": 81057,
-          "Title": "Обжорство"
         }
       ]
     },
@@ -1240,6 +1250,10 @@
         {
           "ID": 10263,
           "Title": "Категория:Общество"
+        },
+        {
+          "ID": 48637,
+          "Title": "Категория:Высшие учебные заведения по странам"
         },
         {
           "ID": 202091,
