--- a/nationalization/internal/languages/sco.json
+++ b/nationalization/internal/languages/sco.json
@@ -84,6 +84,10 @@
           "Title": "Green Day"
         },
         {
+          "ID": 8682,
+          "Title": "Bigfit"
+        },
+        {
           "ID": 8710,
           "Title": "Coffee"
         },
@@ -122,6 +126,10 @@
         {
           "ID": 93352,
           "Title": "Fried egg"
+        },
+        {
+          "ID": 126229,
+          "Title": "Realism (airts)"
         },
         {
           "ID": 135758,
@@ -188,6 +196,10 @@
         {
           "ID": 95345,
           "Title": "Category:Geomorphology"
+        },
+        {
+          "ID": 195709,
+          "Title": "Category:Monuments an memorials"
         }
       ],
       "Articles": [
@@ -484,6 +496,10 @@
           "Title": "Category:Surnames"
         },
         {
+          "ID": 47716,
+          "Title": "Category:Weemen"
+        },
+        {
           "ID": 88491,
           "Title": "Category:Sel"
         },
@@ -696,10 +712,6 @@
           "Title": "Category:Releegion"
         },
         {
-          "ID": 6376,
-          "Title": "Category:Meethologie"
-        },
-        {
           "ID": 75118,
           "Title": "Category:Belief"
         },
@@ -714,10 +726,6 @@
         {
           "ID": 90693,
           "Title": "Category:Anthropology o releegion"
-        },
-        {
-          "ID": 187065,
-          "Title": "Category:Filosofical theories"
         },
         {
           "ID": 192399,
@@ -742,8 +750,16 @@
           "Title": "Category:Social sciences"
         },
         {
+          "ID": 90081,
+          "Title": "Category:Varsities an colleges bi kintra"
+        },
+        {
           "ID": 146996,
           "Title": "Category:Feminism"
+        },
+        {
+          "ID": 202004,
+          "Title": "Category:Internaitional Organisations"
         }
       ],
       "Articles": [
